tests/NormalTests/paczka1/fuzzy1/94188252.err
Error in line 1: KqIMB0wB S82 27,3
Error in line 2: KqIMB0wB S992 24,6
Error in line 7: PEKsXJ S358 61,5
Error in line 14: KqIMB0wB S82 -2,8
Error in line 10: PEKsXJ S992 46,9
Error in line 6: KqIMB0wB S82 20,2
Error in line 18: BXtLgO5ZS6 S358 94,1
Error in line 20: BXtLgO5ZS6 S992 33,8
